--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
+/**
+ * Open Props - CSS design tokens and utilities
+ * Documentation: https://open-props.style/
+ * DeepWiki Reference: https://deepwiki.com/argyleink/open-props
+ */
 @import "open-props/open-props.min.css";
 @import "open-props/normalize.min.css";
 @import "open-props/buttons.min.css";
