fix: fix emoji picker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -680,6 +680,5 @@ body {
   position: absolute;
   position-anchor: --emoji-anchor;
   position-area: top;
-  position-try-fallbacks: flip-block;
-  translate: -40% 0;
+  position-try-fallbacks: bottom;
 }
