--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1010,6 +1010,7 @@ body {
   .virtualized-list-container {
     padding-left: var(--size-2);
     padding-right: var(--size-2);
+    margin-bottom: var(--app-bottom-nav-height);
   }
 }
 
