fix: remove border

--- a/src/components/wrapstodon/wrapstodon.css
+++ b/src/components/wrapstodon/wrapstodon.css
@@ -440,6 +440,8 @@ dialog:has(.wrapstodon-modal-wrapper) {
     background: transparent;
     box-shadow: none;
     overflow: visible;
+    border: none;
+    outline: none;
 }
 
 dialog:has(.wrapstodon-modal-wrapper)::backdrop {
